feat: fixed publications not publishing